--- a/neo4j-flask/iPhyloGeo/templates/index.html
+++ b/neo4j-flask/iPhyloGeo/templates/index.html
@@ -19,4 +19,4 @@
 <br />
 
 <h3>Today's Recent Posts</h3>
-{% include "display_posts.html" %} {% endblock %}
+{% include "display_output.html" %} {% endblock %}
